--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ db = [
 #snarkvm = { path = "../../src/snarkVM" }
 #snarkvm = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "unchecked" }
 #snarkvm-algorithms = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "unchecked" }
-snarkvm = "0.9.13"
-snarkvm-algorithms = "0.9.13"
-snarkvm-curves = "0.9.13"
-snarkvm-utilities = "0.9.13"
-snarkos-account = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
-snarkos-node-messages = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
+snarkvm = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet-staging" }
+snarkvm-algorithms = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet-staging" }
+snarkvm-curves = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet-staging" }
+snarkvm-utilities = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet-staging" }
+snarkos-account = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet-staging" }
+snarkos-node-messages = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet-staging" }
 tracing = "0.1.37"
 tracing-log = "0.1.3"
 futures = "0.3.26"
