--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,15 @@ snarkvm-algorithms = { git = "https://github.com/AleoNet/snarkVM.git", branch = 
 snarkvm-curves = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet-staging" }
 snarkvm-utilities = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet-staging" }
 snarkos-account = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet-staging" }
-snarkos-node-messages = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet-staging" }
+snarkos-node-router-messages = { git = "https://github.com/AleoNet/snarkOS.git", branch = "mainnet-staging" }
 tracing = "0.1.37"
-tracing-log = "0.1.3"
+tracing-log = "0.2.0"
 futures = "0.3.26"
 futures-util = "0.3.26"
 rand = "0.8.5"
 tokio-util = "0.7.7"
 tokio-stream = "0.1.11"
-dirs = "4.0.0"
+dirs = "5.0.1"
 bincode = "1.3.3"
 anyhow = "1.0.69"
 signal-hook = "0.3.15"
@@ -42,9 +42,9 @@ semver = "1.0.16"
 hex = "0.4.3"
 rayon = "1.6.1"
 num_cpus = "1.15.0"
-flurry = "0.4.0"
-savefile = "0.12.0"
-savefile-derive = "0.12.0"
+flurry = "0.5.1"
+savefile = "0.17.4"
+savefile-derive = "0.17.4"
 
 [dependencies.speedometer]
 path = "./speedometer"
@@ -68,12 +68,12 @@ version = "0.7.7"
 optional = true
 
 [dependencies.deadpool-postgres]
-version = "0.10.5"
+version = "0.14.0"
 optional = true
 features = ["rt_tokio_1"]
 
 [dependencies.reqwest]
-version = "0.11.14"
+version = "0.12.5"
 features = ["json"]
 
 [dependencies.parking_lot]
@@ -107,7 +107,7 @@ version = "4.1.6"
 features = ["derive"]
 
 [dev-dependencies]
-criterion= "0.4.0"
+criterion= "0.5.1"
 
 # testnet2 code, not updated to testnet3 so skip now
 #[[bench]]
