--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,19 @@ edition = "2021"
 
 [features]
 default = []
-db = [
-    "deadpool-postgres",
-    "tokio-postgres"
-]
+db = ["deadpool-postgres", "tokio-postgres"]
 
 [dependencies]
 #snarkvm = { path = "../../src/snarkVM" }
-snarkvm = { git = "https://github.com/AleoNet/snarkVM", branch = "mainnet-staging", features = ["full"] }
+snarkvm = { git = "https://github.com/AleoNet/snarkVM", branch = "mainnet-staging", features = [
+    "full",
+] }
+snarkvm-algorithms = { git = "https://github.com/AleoNet/snarkVM", branch = "mainnet-staging", features = [
+] }
+snarkvm-curves = { git = "https://github.com/AleoNet/snarkVM", branch = "mainnet-staging", features = [
+] }
+snarkvm-utilities = { git = "https://github.com/AleoNet/snarkVM", branch = "mainnet-staging", features = [
+] }
 snarkos-account = { git = "https://github.com/AleoNet/snarkOS", branch = "mainnet-staging" }
 snarkos-node-router-messages = { git = "https://github.com/AleoNet/snarkOS", branch = "mainnet-staging" }
 tracing = "0.1.37"
@@ -85,13 +90,7 @@ features = ["preserve_order"]
 
 [dependencies.tokio]
 version = "1.25.0"
-features = [
-    "rt-multi-thread",
-    "macros",
-    "sync",
-    "time",
-    "net",
-]
+features = ["rt-multi-thread", "macros", "sync", "time", "net"]
 
 [dependencies.signal-hook-tokio]
 version = "0.3.1"
